# preparation_for_jobs

./: README.md
each_template_rate/: .flake8  pyproject.toml
each_template_rate/assets/: settings.yml
each_template_rate/each_template_rate/: __init__.py  get_template_rate.py
each_template_rate/tests/: conftest.py  test_get_template_rate.py  test_load.py
